objects/DaScoopComposer__DaScoop_Snippet__c.object
<CustomObject>
    <fields>
        <fullName>DaScoopComposer__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>indicates whether this view is to be displayed in GMail or not. This is useful if you want to want to temporarily disable a snippet.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Description__c</fullName>
        <inlineHelpText>This field contains a description of this Groove View for documentation purposes (accessible to admins only).</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Excluded_Included_Profiles__c</fullName>
        <inlineHelpText>is a comma separated list of profile IDs that shall be excluded or included (depending on what you picked in the field &quot;Profile Specific Results&quot;).</inlineHelpText>
        <label>Excluded/Included Profiles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Profile_Specific_Results__c</fullName>
        <inlineHelpText>indicates whether this view shall simply be displayed to all users or only if a user is assigned to a certain profile. You can specify a list of profiles that shall be excluded or included.</inlineHelpText>
        <label>Profile Specific Results</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All profiles get to see this snippet</fullName>
                    <default>true</default>
                    <label>All profiles get to see this snippet</label>
                </value>
                <value>
                    <fullName>Only display this snippet to the profiles below.</fullName>
                </value>
                <value>
                    <fullName>Do not display this snippet to the profiles below.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Query__c</fullName>
        <inlineHelpText>contains the SOQL query to be executed for this view. The query must not contain aggregate functions. Also HAVING and GROUP BY are not allowed.</inlineHelpText>
        <label>Query</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Related_To_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this snippet will be used for Related To logging or not. Enable this view to use this query for logging.</description>
        <inlineHelpText>Indicates whether this snippet will be used for Related To logging or not. Enable this view to use this query for logging.</inlineHelpText>
        <label>Related-To Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Sfdc_Base_Url__c</fullName>
        <inlineHelpText>This is a system field with no relevance for the user.</inlineHelpText>
        <label>Sfdc_Base_Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Test_the_Scoop_Composer__c</fullName>
        <formula>HYPERLINK(&apos;/apex/DaScoopComposer__DaScoopComposerTestApp&apos;,
  &apos;Click Here&apos;,
  &apos;_blank&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test your Groove Views</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__View_Order__c</fullName>
        <description>Determines in which order this view is displayed relative to other views (highest number first). Groove Views with no order set will be rendered after any which do have an order set.</description>
        <inlineHelpText>Determines in which order this view is displayed relative to other views (highest number first). Groove Views with no order set will be rendered after any which do have an order set.</inlineHelpText>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Groove View</label>
    <listViews>
        <fullName>DaScoopComposer__All</fullName>
        <columns>DaScoopComposer__Active__c</columns>
        <columns>DaScoopComposer__View_Order__c</columns>
        <columns>NAME</columns>
        <columns>DaScoopComposer__Query__c</columns>
        <columns>DaScoopComposer__Profile_Specific_Results__c</columns>
        <columns>DaScoopComposer__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Groove Views</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Groove View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groove Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>